# fastapi-realworld-example-app

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: conduit.yml
app/api/dependencies/: authentication.py
app/api/routes/: authentication.py
app/api/routes/articles/: articles_resource.py
app/core/settings/: app.py  base.py  development.py  production.py
app/db/migrations/versions/: 3c64a23a5b85_erase_salt.py
app/db/queries/sql/: users.sql
app/db/repositories/: fastapi-realworld-example-app.code-workspace  profiles.py  users.py
app/models/: common.py
app/models/domain/: rwmodel.py  users.py
app/models/schemas/: rwschema.py  users.py
app/services/: security.py
