[project]
name = "fastapi-realworld-example-app"
version = "0.0.0"
description = "Backend logic implementation for https://github.com/gothinkster/realworld with awesome FastAPI"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "uvicorn>=0.18.2",
    "fastapi>=0.79.1",
    "pydantic[email,dotenv]>=1.9",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.4",
    "databases>=0.6.1",
    "asyncpg>=0.26.0",
    "psycopg2-binary>=2.9.3",
    "aiosql>=6.2",
    "pypika>=0.48.9",
    "alembic>=1.8",
    "python-slugify>=6.1",
    "Unidecode>=1.3",
    "loguru>=0.6.0",
    "pydantic-settings>=2.8.1",
    "bump-pydantic>=0.8.0",
]

[optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10",
    "autoflake>=1.4",
    "wemake-python-styleguide>=0.16.1",
    "mypy>=0.971",
    "flake8-fixme>=1.1",
    "pytest>=7.1",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.19.0",
    "pytest-env>=0.6.2",
    "pytest-xdist>=2.4.0",
    "httpx>=0.23.0",
    "asgi-lifespan>=1.0.1"
]


